rolled in review comments